change: added additional variants for the aerodynamic trim improvement

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2588,8 +2588,26 @@
   "tetra/schema/shield/plate/aerodynamic_trim.description": "Frame the shield with an aerodynamic trim which allows the shield to be thrown.",
   "tetra/schema/shield/plate/aerodynamic_trim.slot1": "Material",
 
-  "tetra.improvement.shield/aerodynamic_trim.name": "Aerodynamic trim",
-  "tetra.improvement.shield/aerodynamic_trim.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_iron.name": "Aerodynamic trim §8(iron)",
+  "tetra.improvement.shield/aerodynamic_trim_iron.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_gold.name": "Aerodynamic trim §8(gold)",
+  "tetra.improvement.shield/aerodynamic_trim_gold.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_copper.name": "Aerodynamic trim §8(copper)",
+  "tetra.improvement.shield/aerodynamic_trim_copper.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_tin.name": "Aerodynamic trim §8(tin)",
+  "tetra.improvement.shield/aerodynamic_trim_tin.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_silver.name": "Aerodynamic trim §8(silver)",
+  "tetra.improvement.shield/aerodynamic_trim_silver.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_nickel.name": "Aerodynamic trim §8(nickel)",
+  "tetra.improvement.shield/aerodynamic_trim_nickel.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_lead.name": "Aerodynamic trim §8(lead)",
+  "tetra.improvement.shield/aerodynamic_trim_lead.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_electrum.name": "Aerodynamic trim §8(electrum)",
+  "tetra.improvement.shield/aerodynamic_trim_electrum.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_bronze.name": "Aerodynamic trim §8(bronze)",
+  "tetra.improvement.shield/aerodynamic_trim_bronze.description": "Allows the shield to be thrown",
+  "tetra.improvement.shield/aerodynamic_trim_steel.name": "Aerodynamic trim §8(steel)",
+  "tetra.improvement.shield/aerodynamic_trim_steel.description": "Allows the shield to be thrown",
 
   "tetra/schema/shield/plate/banner.name": "Banner",
   "tetra/schema/shield/plate/banner.description": "Cover the face of the plate with a banner.",
