change: added additional variants for the shield grip module

--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -2445,8 +2445,25 @@
   "tetra.module.shield/basic_grip.name": "Basic grip",
   "tetra.module.shield/basic_grip.description": "A basic grip. Grips are the primary source of integrity for shields.",
 
-  "tetra.variant.basic_grip/oak": "Basic oak grip",
-  "tetra.variant.basic_grip/iron":"Basic iron grip",
+  "tetra.variant.basic_grip/bone": "Bone grip",
+  "tetra.variant.basic_grip/iron": "Iron grip",
+  "tetra.variant.basic_grip/blaze_rod": "Blazing grip",
+  "tetra.variant.basic_grip/end_rod": "End rod",
+  "tetra.variant.basic_grip/oak": "Wooden grip",
+  "tetra.variant.basic_grip/spruce": "Spruce grip",
+  "tetra.variant.basic_grip/birch": "Birch grip",
+  "tetra.variant.basic_grip/jungle": "Jungle wood grip",
+  "tetra.variant.basic_grip/acacia": "Acacia grip",
+  "tetra.variant.basic_grip/dark_oak": "Dark oak grip",
+  "tetra.variant.basic_grip/maple": "Maple grip",
+  "tetra.variant.basic_grip/cherry": "Cherry wood grip",
+  "tetra.variant.basic_grip/baobab": "Baobab grip",
+  "tetra.variant.basic_grip/bronze": "Bronze grip",
+  "tetra.variant.basic_grip/steel": "Steel grip",
+  "tetra.variant.basic_grip/greatwood": "Greatwood grip",
+  "tetra.variant.basic_grip/treated_wood": "Treated wood grip",
+  "tetra.variant.basic_grip/ironwood": "Ironwood grip",
+  "tetra.variant.basic_grip/forged_beam": "Repurposed beam",
 
   "tetra/schema/shield/grip/straps.name": "Straps",
   "tetra/schema/shield/grip/straps.description": "Replace the grip with straps crafted from the given materials. A shield held with straps is typically less taxing to use. Grips are the primary source of integrity for shields.",
@@ -2460,6 +2477,12 @@
   "tetra.variant.straps/hide": "Hide straps",
   "tetra.variant.straps/leather": "Leather straps",
   "tetra.variant.straps/phantom_membrane": "Phantom sinew straps",
+
+  "tetra.improvement.grip/blazing.name": "Blazing",
+  "tetra.improvement.grip/blazing.description": "Using this may set you on fire, more sever in hot environments",
+
+  "tetra.improvement.grip/ender_reverb.name": "Ender reverb",
+  "tetra.improvement.grip/ender_reverb.description": "Reacts negatively with nearby entities originating from the end",
 
   "tetra/schema/shield/grip/hone_speed_1_mult.name": "Hone: Speed I",
   "tetra/schema/shield/grip/hone_speed_1_mult.description": "Hone the grip to reduce the base cooldown by a relative amount.",
