--- a/src/main/resources/assets/tetra/lang/zh_cn.json
+++ b/src/main/resources/assets/tetra/lang/zh_cn.json
@@ -23,19 +23,19 @@
     "tetra.workbench.schematic_detail.back": "返回",
     "tetra.workbench.schematic_detail.experience": "这个操作需要 %d 等级的经验",
     "tetra.workbench.schematic_list.temporary": "按物品栏中的物品提供",
-    "tetra.capability.hammer": "锤打",
-    "tetra.capability.hammer.requirement": "这个动作需要一个 %d 级的锤",
-    "tetra.capability.axe": "砍伐",
-    "tetra.capability.axe.requirement": "这个动作需要一个 %d 级的斧",
-    "tetra.capability.pickaxe": "挖掘",
-    "tetra.capability.pickaxe.requirement": "这个动作需要一个 %d 级的镐",
-    "tetra.capability.shovel": "掘土",
-    "tetra.capability.shovel.requirement": "这个动作需要一个 %d 级的铲",
-    "tetra.capability.cut": "切断",
-    "tetra.capability.cut.requirement": "这个动作需要一个 %d 级的切割工具",
-    "tetra.capability.pry": "撬动",
-    "tetra.capability.pry.requirement": "这个动作需要一个 %d 级的撬棍工具",
-    "tetra.capability.available": "你有一个 %d 级的",
+    "tetra.tool.hammer": "锤打",
+    "tetra.tool.hammer.requirement": "这个动作需要一个 %d 级的锤",
+    "tetra.tool.axe": "砍伐",
+    "tetra.tool.axe.requirement": "这个动作需要一个 %d 级的斧",
+    "tetra.tool.pickaxe": "挖掘",
+    "tetra.tool.pickaxe.requirement": "这个动作需要一个 %d 级的镐",
+    "tetra.tool.shovel": "掘土",
+    "tetra.tool.shovel.requirement": "这个动作需要一个 %d 级的铲",
+    "tetra.tool.cut": "切断",
+    "tetra.tool.cut.requirement": "这个动作需要一个 %d 级的切割工具",
+    "tetra.tool.pry": "撬动",
+    "tetra.tool.pry.requirement": "这个动作需要一个 %d 级的撬棍工具",
+    "tetra.tool.available": "你有一个 %d 级的",
     "tetra.stats.efficiency_suffix": "效率",
     "tetra.stats.strength_suffix": "强度",
     "tetra.stats.tier_suffix": "阶",
