--- a/src/main/resources/assets/tetra/lang/en_us.json
+++ b/src/main/resources/assets/tetra/lang/en_us.json
@@ -80,8 +80,11 @@
   "tetra.stats.speed_normalized": "Speed",
   "tetra.stats.speed_normalized.tooltip": "Changes attack speed by §e%s",
 
-  "tetra.stats.damage": "Damage",
-  "tetra.stats.damage.tooltip": "Deals §e%s §rdamage",
+  "tetra.stats.attack_damage": "Damage",
+  "tetra.stats.attack_damage.tooltip": "Deals §e%s §rdamage",
+
+  "tetra.stats.attack_damage_normalized": "Damage",
+  "tetra.stats.attack_damage_normalized.tooltip": "Changes attack damage by §e%s",
 
   "tetra.stats.draw_strength": "Strength",
   "tetra.stats.draw_strength.tooltip": "When fully drawn this item will add §e%s §rdamage to fired projectiles",
@@ -161,6 +164,9 @@
 
   "tetra.stats.quickStrike": "Quick",
   "tetra.stats.quickStrike.tooltip": "Reduces the minimum damage dealt to §e%s§r while the attack cooldown is active",
+
+  "tetra.stats.counterweight": "Counterweight",
+  "tetra.stats.counterweight.tooltip": "Increases the attack speed by §e0.15§r if the item has a total integrity use of §e%s§r, the bonus is reduced by §e0.05§r for each point of difference in integrity use.",
 
   "tetra.stats.softStrike": "Soft strike",
   "tetra.stats.softStrike.tooltip": "Items crafted using this tool gains increased durability",
@@ -698,41 +704,41 @@
   "tetra.variant.sword_socket/pristine_lapis.description": "A gem, fitted onto the sword where the blade meets the hilt. The gem is enchanted and provides magical boons to the wielder of the sword.\n\nThe gem is of pristine quality and provides improved effects compared to a gem of lesser quality.",
 
   "tetra/schematic/sword/counterweight.name": "Counterweight",
-  "tetra/schematic/sword/counterweight.description": "Balance the blade with a counterweight. Greatly increases attack speed if the counterweight consumes the same amount of integrity as all other modules combined. If integrity usage differs the bonus is reduced, a large difference reduces the bonus further and may even reduce the attack speed.",
+  "tetra/schematic/sword/counterweight.description": "Balance the blade with a counterweight. Increases the attack speed by 0.15 if the counterweight effect level matches the total integrity for the item, the bonus is reduced by 0.05 for each point of difference between the integrity use and the effect level.",
   "tetra/schematic/sword/counterweight.slot1": "Material",
 
   "tetra.module.sword/counterweight.name": "Counterweight",
-  "tetra.module.sword/counterweight.description": "A counterweight attached to the bottom of the hilt. Greatly increases attack speed if the counterweight consumes the same amount of integrity as all other modules combined. If integrity usage differs the bonus is reduced, a large difference reduces the bonus further and may even reduce the attack speed.",
+  "tetra.module.sword/counterweight.description": "A counterweight attached to the bottom of the hilt. Increases the attack speed by 0.15 if the counterweight effect level matches the total integrity for the item, the bonus is reduced by 0.05 for each point of difference between the integrity use and the effect level.",
 
-  "tetra.variant.counterweight/oak": "Wooden counterweight §7II",
-  "tetra.variant.counterweight/spruce": "Spruce counterweight §7II",
-  "tetra.variant.counterweight/birch": "Birch counterweight §7II",
-  "tetra.variant.counterweight/jungle": "Jungle counterweight §7II",
-  "tetra.variant.counterweight/acacia": "Acacia counterweight §7II",
-  "tetra.variant.counterweight/dark_oak": "Dark oak counterweight §7II",
-  "tetra.variant.counterweight/cobblestone": "Cobblestone counterweight §7IV",
-  "tetra.variant.counterweight/stone": "Stone counterweight §7IV",
-  "tetra.variant.counterweight/granite": "Granite counterweight §7IV",
-  "tetra.variant.counterweight/diorite": "Diorite counterweight §7IV",
-  "tetra.variant.counterweight/andesite": "Andesite counterweight §7IV",
-  "tetra.variant.counterweight/iron": "Iron counterweight §7IV",
-  "tetra.variant.counterweight/flint": "Flint counterweight §7II",
-  "tetra.variant.counterweight/gold": "Gold counterweight §7IV",
-  "tetra.variant.counterweight/diamond": "Diamond counterweight §7IV",
-  "tetra.variant.counterweight/obsidian": "Obsidian counterweight §7VI",
-  "tetra.variant.counterweight/copper": "Copper counterweight §7IV",
-  "tetra.variant.counterweight/tin": "Tin counterweight §7II",
-  "tetra.variant.counterweight/silver": "Silver counterweight §7IV",
-  "tetra.variant.counterweight/nickel": "Nickel counterweight §7IV",
-  "tetra.variant.counterweight/lead": "Lead counterweight §7VI",
-  "tetra.variant.counterweight/bronze": "Bronze counterweight §7IV",
-  "tetra.variant.counterweight/electrum": "Electrum counterweight §7IV",
-  "tetra.variant.counterweight/steel": "Steel counterweight §7IV",
-  "tetra.variant.counterweight/thaumium": "Thaumium counterweight §7IV",
-  "tetra.variant.counterweight/ironwood": "Ironwood counterweight §7IV",
-  "tetra.variant.counterweight/steeleaf": "Steeleaf counterweight §7IV",
-  "tetra.variant.counterweight/fierymetal": "Fierymetal counterweight §7VI",
-  "tetra.variant.counterweight/knightmetal": "Knightmetal counterweight §7IV",
+  "tetra.variant.counterweight/oak": "Wooden counterweight",
+  "tetra.variant.counterweight/spruce": "Spruce counterweight",
+  "tetra.variant.counterweight/birch": "Birch counterweight",
+  "tetra.variant.counterweight/jungle": "Jungle counterweight",
+  "tetra.variant.counterweight/acacia": "Acacia counterweight",
+  "tetra.variant.counterweight/dark_oak": "Dark oak counterweight",
+  "tetra.variant.counterweight/cobblestone": "Cobblestone counterweight",
+  "tetra.variant.counterweight/stone": "Stone counterweight",
+  "tetra.variant.counterweight/granite": "Granite counterweight",
+  "tetra.variant.counterweight/diorite": "Diorite counterweight",
+  "tetra.variant.counterweight/andesite": "Andesite counterweight",
+  "tetra.variant.counterweight/iron": "Iron counterweight",
+  "tetra.variant.counterweight/flint": "Flint counterweight",
+  "tetra.variant.counterweight/gold": "Gold counterweight",
+  "tetra.variant.counterweight/diamond": "Diamond counterweight",
+  "tetra.variant.counterweight/obsidian": "Obsidian counterweight",
+  "tetra.variant.counterweight/copper": "Copper counterweight",
+  "tetra.variant.counterweight/tin": "Tin counterweight",
+  "tetra.variant.counterweight/silver": "Silver counterweight",
+  "tetra.variant.counterweight/nickel": "Nickel counterweight",
+  "tetra.variant.counterweight/lead": "Lead counterweight",
+  "tetra.variant.counterweight/bronze": "Bronze counterweight",
+  "tetra.variant.counterweight/electrum": "Electrum counterweight",
+  "tetra.variant.counterweight/steel": "Steel counterweight",
+  "tetra.variant.counterweight/thaumium": "Thaumium counterweight",
+  "tetra.variant.counterweight/ironwood": "Ironwood counterweight",
+  "tetra.variant.counterweight/steeleaf": "Steeleaf counterweight",
+  "tetra.variant.counterweight/fierymetal": "Fierymetal counterweight",
+  "tetra.variant.counterweight/knightmetal": "Knightmetal counterweight",
 
   "tetra/schematic/sword/reinforced_fuller.name": "Reinforce fuller",
   "tetra/schematic/sword/reinforced_fuller.description": "Reinforce the fuller using the given material. Provides additional integrity and reduces the chance for the item to take damage, but makes the sword heavier and slower to swing.",
